Correct spacing

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     align-items: center;
     background-color: var(--white);
     color: var(--Wenge-Brown);
+    line-height: 1.5;
 }
 
 h1 {
@@ -79,8 +80,13 @@ h3 {
         font-weight: 700;
  }
 
- ol {
+ ol,ul {
     color: var(--Wenge-Brown);
+    padding: 0 24px;
+ }
+ 
+ li {
+    padding-left: 16px;
  }
 
   li::marker {
